# NN_MNIST

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp  test.txt
include/: AsyncFileReader.h  DataMatrix.hpp  MNIST.hpp  NNActivationFunction.h  NNActivationFunction.hpp  NeuralNetwork.hpp  NeuralNetworkLayer.hpp  RandomFloatGenerate.hpp  ReLU.hpp  Sigmoid.hpp  config.h
script/: picture.py  read_mnist.py
src/: AsyncFileReader.cpp  CMakeLists.txt
static/: NN_Layer.excalidraw
